<resources>
    <string name="app_name">Killhope</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="page1title">Early Earth</string>
    <string name="page1contents">About 450 million years ago, during the Ordovician period of Earth history, the area we know as northern England was located 15°S of the equator (Matte, 2001). Here it lay beneath a deep ocean, in which mud and silt were deposited.

As geological time progressed, vast movements of the Earth’s tectonic plates compressed these muds, turning them into slate and forming the Skiddaw Group. (These same movements causes gigantic volcanoes to erupt lava and ash.)</string>

    <string name="page2title">The Weardale Granite</string>

    <string name="page2contents">Movement of the Earths plates caused compression in the North East of England, beginning at around 490 million years ago.

Approximately 400 million years ago a large mass of magma (molten rock) was injected into the Ordovician slates and volcanic rocks. This cooled and crystallised, forming the Weardale Granite.

An unconformity lies above the granite, a time gap in the rock record caused by millions of years of erosion of the overlying rocks. After this significant ‘time gap’ the Carboniferous rocks that make up most of the Northern Pennines were deposited on top of the granite.</string>

    <string name="page3title">Carboniferous Sediments</string>

    <string name="page3contents">In the Early Carboniferous movement of the Earths tectonic plates  opened up sedimentary basins in Northumberland and Yorkshire. This allowed the deposition of the Carboniferous sedimentary rocks we observe today during the period from 354-300 million years ago.

During this time, the North Pennines was drifting north across the equator and was episodically submerged beneath shallow tropical seas, similar to that around the present day Bahamas.

Skeletons of sea creatures accumulated as calcitic ooze on the seafloor, whilst rivers fed mud and sand particles into the sea, building up vast deltas on which swampy forests grew. Over millions of years, the calcitic ooze, mud, sand and wood rich swamps compacted into layers of limestone, shale, sandstone and coal.

Fluctuating sea levels covered and exposed the deltas, allowing for a cyclic pattern of sedimentary rock to form. Each cycle of limestone, shale, sandstone and coal is referred to as a cyclothem.</string>

    <string name="page4title">Formation of the North Pennine Ore Field</string>

    <string name="page4contents">At great depths in the Earth, rocks can be saturated with saline water, very much like sea water, this often dissolves chemical elements from the surrounding rocks which contain traces or iron, lead, zinc and the various elements found in Northern Pennines mineral deposits.
The Weardale granite has been a powerful heat source since it was first deposited 400 Million years ago, and is still appreciably hotter than the surrounding rocks. The original geological model for the North Pennine ore field hypothesised that residual heat from the Weardale granite caused heating of groundwater within the overlying carboniferous sediments, as shown in the diagram above. Heating remobilised the fluids, causing them to circulate upwards through cracks in the overlying rocks. This process created a vacuum effect, in turn sourcing fluids from the surrounding Ordovician sediments.These fluids carried dissolved minerals, which were eventually precipitated as the fluids cooled and produced the mineral deposits that we see in the Killhope area today. </string>

    <string name="page5title">New Geological Model</string>

    <string name="page5contents">New geological dating methods have shown that the minerals originally thought to be sourced from the Ordovician sediments, are in fact Early Permian in age. This suggests that the minerals were in fact sourced from the Whin Sill, a Dolerite intrusion thought to be approximately 300 Million years old. The Whin Sill intruded the North Pennine area after the Variscan Orogeny. The Variscan Orogeny refers to a great movement of tectonic plates that eventually led to the amalgamation of continents to make the supercontinent Pangea. The after effect of the Variscan event led to extension across England, giving the opportunity for the Whin Sill to intrude, and supply the mineralising fluids for the North Pennine ore field. Remobilisation of fluids did occur as a result of heating from the weardale granite, although this was not the source of the mineralisation as originally thought.
</string>

    <string name="page6title">Local Timeline</string>
</resources>
